--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,7 +254,7 @@ footer div h3 {
     font-size: 22px;
 }
 
-footer div h3~i {
+footer div a>i {
     margin: 0% 1%;
     font-size: 150%;
 }
@@ -439,7 +439,7 @@ i.fa-linkedin-in {
         font-size: 115%;
     }
 
-    footer div h3~i {
+    footer div a>i {
         margin: 0% 1%;
         font-size: 117%;
     }
