--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -126,6 +126,15 @@ form div {
         column-gap: 20px;
     }
 
+    input[type=email] {
+        width: 100%;
+        height: 45px;
+        padding: 12px 20px;
+        margin: 8px 0;
+        border: 1px solid;
+        box-sizing: border-box;
+    }
+
     input[type=text] {
         width: 100%;
         height: 45px;
