--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -43,7 +43,7 @@
     width: 100%;
     height: 250px;
     margin-bottom: 10px;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 /**
@@ -96,6 +96,6 @@
     .projects-content-section-image>img {
         width: 490px;
         height: 330px;
-        object-fit: cover;
+        object-fit: contain;
     }
 }
