--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -71,6 +71,15 @@ form div {
     margin: 1.95% 0px;
 }
 
+input[type=email] {
+    width: 100%;
+    height: 45px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    border: 1px solid;
+    box-sizing: border-box;
+}
+
 /**
 -------------------------------------------------------
 ---------- RESPONSIVENESS MANAGEMENT ------------------
