--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -58,6 +58,13 @@
     line-height: 1.6em;
 }
 
+.resume-content-section-details-element-infos p.tech-stack {
+    /* font-size: 120%; */
+    font-style: italic;
+    margin-top: -3%;
+    margin-bottom: 8%;
+}
+
 .resume-content-section-details-element-infos ul li {
     margin-top: -6.3%;
     margin-bottom: 5%;
@@ -139,6 +146,12 @@
         margin-top: -9.3%;
         font-size: 107%;
         line-height: 1.6em;
+    }
+
+    .resume-content-section-details-element-infos p.tech-stack {
+        /* font-size: 100%; */
+        margin-top: -3%;
+        margin-bottom: 8%;
     }
 
     .resume-content-section-details-element-infos ul li {
